<resources>
    <string name="app_name">EasyCourse</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button_main">Login</string>
    <string name="login">LOG IN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submission">LOG IN</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="_submission">SIGN UP</string>
    <string name="already_a_member_login">Already a member? Log in</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="signup">SIGN UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>

    <string name="facebook_app_id">418973835326680</string>
    <string name="fb_login_protocol_scheme">fb418973835326680</string>
    <string name="or_connect_with_facebook">Or connect with facebook :</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BEYA NTUMBA Joel</string>
    <string name="nav_header_subtitle">joelbeya.bj@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Courses</string>
    <string name="menu_slideshow">My Videos Courses</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share/Excercises</string>
    <string name="menu_send">Send</string>
    <string name="cours">Courses List</string>
    <string name="title_note_list">Courses Available</string>
    <string name="title_note_detail">Note Detail</string>



    <string name="nivAc">Academic Level</string>
    <string name="niv">Level</string>
    <string name="name">Name</string>

    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="title_cours_list">Notes</string>
    <string name="title_cours_detail">Cours Detail</string>
</resources>
